--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Node Js development</title>
 </head>
 <body>
-    <h1>Welcome to nodejs by Vedant Raut </h1>
+    <h1>Welcome, Vedant Raut </h1>
 </body>
 </html>
